--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
     <div id="checkout-modal">
       
     </div>
-    <script type="module" src="/src/main.jsx"></script>
+    <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
